--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@
                     <div class="project-item-icon-box">
                       <ion-icon name="eye-outline"></ion-icon>
                     </div>
-                    <img src="./assets/images/1.PNG" alt="Tableau Reports" loading="lazy">
+                    <img src="./assets/images/1.png" alt="Tableau Reports" loading="lazy">
                   </figure>
                   <h3 class="project-title">Daily Sales Report</h3>
                   <p class="project-category">Tableau Report</p>
@@ -435,7 +435,7 @@
                     <div class="project-item-icon-box">
                       <ion-icon name="eye-outline"></ion-icon>
                     </div>
-                    <img src="./assets/images/2.PNG" alt="Promo Report" loading="lazy">
+                    <img src="./assets/images/2.png" alt="Promo Report" loading="lazy">
                   </figure>
                   <h3 class="project-title">Promo Report</h3>
                   <p class="project-category">Tableau Report</p>
@@ -447,7 +447,7 @@
                     <div class="project-item-icon-box">
                       <ion-icon name="eye-outline"></ion-icon>
                     </div>
-                    <img src="./assets/images/3.PNG" alt="Store Dashboard Monitoring" loading="lazy">
+                    <img src="./assets/images/3.png" alt="Store Dashboard Monitoring" loading="lazy">
                   </figure>
                   <h3 class="project-title">Store Dashboard Monitoring</h3>
                   <p class="project-category">Tableau Report</p>
@@ -459,7 +459,7 @@
                     <div class="project-item-icon-box">
                       <ion-icon name="eye-outline"></ion-icon>
                     </div>
-                    <img src="./assets/images/4.PNG" alt="Average Daily Sales Recovery Report" loading="lazy">
+                    <img src="./assets/images/4.png" alt="Average Daily Sales Recovery Report" loading="lazy">
                   </figure>
                   <h3 class="project-title">Average Daily Sales Recovery Report</h3>
                   <p class="project-category">Tableau Report</p>
@@ -473,7 +473,7 @@
                     <div class="project-item-icon-box">
                       <ion-icon name="eye-outline"></ion-icon>
                     </div>
-                    <img src="./assets/images/pbi-1.PNG" alt="Network Uptime Monitoring" loading="lazy">
+                    <img src="./assets/images/pbi-1.png" alt="Network Uptime Monitoring" loading="lazy">
                   </figure>
                   <h3 class="project-title">Network Uptime Monitoring</h3>
                   <p class="project-category">Power BI Report</p>
@@ -485,7 +485,7 @@
                     <div class="project-item-icon-box">
                       <ion-icon name="eye-outline"></ion-icon>
                     </div>
-                    <img src="./assets/images/pbi-2.PNG" alt="Item Rationalization" loading="lazy">
+                    <img src="./assets/images/pbi-2.png" alt="Item Rationalization" loading="lazy">
                   </figure>
                   <h3 class="project-title">Item Rationalization</h3>
                   <p class="project-category">Power BI Report</p>
@@ -497,7 +497,7 @@
                     <div class="project-item-icon-box">
                       <ion-icon name="eye-outline"></ion-icon>
                     </div>
-                    <img src="./assets/images/pbi-3.PNG" alt="OS Ticket Monitoring Dashboard" loading="lazy">
+                    <img src="./assets/images/pbi-3.png" alt="OS Ticket Monitoring Dashboard" loading="lazy">
                   </figure>
                   <h3 class="project-title">OS Ticket Monitoring Dashboard</h3>
                   <p class="project-category">Power BI Report</p>
@@ -509,7 +509,7 @@
                     <div class="project-item-icon-box">
                       <ion-icon name="eye-outline"></ion-icon>
                     </div>
-                    <img src="./assets/images/pbi-4.PNG" alt="Service Now VSOT Request Dashboard" loading="lazy">
+                    <img src="./assets/images/pbi-4.png" alt="Service Now VSOT Request Dashboard" loading="lazy">
                   </figure>
                   <h3 class="project-title">Service Now VSOT Request Dashboard</h3>
                   <p class="project-category">Power BI Report</p>
