--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
             </div>
             <ul class="project-list">
               <li class="project-item  active" data-filter-item data-category="tableau report">
-                <a href="https://siaknitonton.github.io/SiakNiTonTon-Portfolio/assets/images/1.png">
+                <a href="https://siaknitonton.github.io/SiakNiTonTon-Portfolio/assets/images/1.png" target="_blank">
                   <figure class="project-img">
                     <div class="project-item-icon-box">
                       <ion-icon name="eye-outline"></ion-icon>
@@ -430,7 +430,7 @@
                 </a>
               </li>
               <li class="project-item  active" data-filter-item data-category="tableau report">
-                <a href="https://siaknitonton.github.io/SiakNiTonTon-Portfolio/assets/images/2.png">
+                <a href="https://siaknitonton.github.io/SiakNiTonTon-Portfolio/assets/images/2.png" target="_blank">
                   <figure class="project-img">
                     <div class="project-item-icon-box">
                       <ion-icon name="eye-outline"></ion-icon>
@@ -442,7 +442,7 @@
                 </a>
               </li>
               <li class="project-item  active" data-filter-item data-category="tableau report">
-                <a href="https://siaknitonton.github.io/SiakNiTonTon-Portfolio/assets/images/3.png">
+                <a href="https://siaknitonton.github.io/SiakNiTonTon-Portfolio/assets/images/3.png" target="_blank">
                   <figure class="project-img">
                     <div class="project-item-icon-box">
                       <ion-icon name="eye-outline"></ion-icon>
@@ -454,7 +454,7 @@
                 </a>
               </li>
               <li class="project-item  active" data-filter-item data-category="tableau report">
-                <a href="https://siaknitonton.github.io/SiakNiTonTon-Portfolio/assets/images/4.png">
+                <a href="https://siaknitonton.github.io/SiakNiTonTon-Portfolio/assets/images/4.png" target="_blank">
                   <figure class="project-img">
                     <div class="project-item-icon-box">
                       <ion-icon name="eye-outline"></ion-icon>
@@ -468,7 +468,7 @@
 
 
               <li class="project-item  active" data-filter-item data-category="power bi">
-                <a href="https://siaknitonton.github.io/SiakNiTonTon-Portfolio/assets/images/pbi-1.png">
+                <a href="https://siaknitonton.github.io/SiakNiTonTon-Portfolio/assets/images/pbi-1.png" target="_blank">
                   <figure class="project-img">
                     <div class="project-item-icon-box">
                       <ion-icon name="eye-outline"></ion-icon>
@@ -480,7 +480,7 @@
                 </a>
               </li>
                <li class="project-item  active" data-filter-item data-category="power bi">
-                <a href="https://siaknitonton.github.io/SiakNiTonTon-Portfolio/assets/images/pbi-2.png">
+                <a href="https://siaknitonton.github.io/SiakNiTonTon-Portfolio/assets/images/pbi-2.png" target="_blank">
                   <figure class="project-img">
                     <div class="project-item-icon-box">
                       <ion-icon name="eye-outline"></ion-icon>
@@ -492,7 +492,7 @@
                 </a>
               </li>
                <li class="project-item  active" data-filter-item data-category="power bi">
-                <a href="https://siaknitonton.github.io/SiakNiTonTon-Portfolio/assets/images/pbi-3.png">
+                <a href="https://siaknitonton.github.io/SiakNiTonTon-Portfolio/assets/images/pbi-3.png" target="_blank"> 
                   <figure class="project-img">
                     <div class="project-item-icon-box">
                       <ion-icon name="eye-outline"></ion-icon>
@@ -504,7 +504,7 @@
                 </a>
               </li>
               <li class="project-item  active" data-filter-item data-category="power bi">
-                <a href="https://siaknitonton.github.io/SiakNiTonTon-Portfolio/assets/images/pbi-4.png">
+                <a href="https://siaknitonton.github.io/SiakNiTonTon-Portfolio/assets/images/pbi-4.png" target="_blank">
                   <figure class="project-img">
                     <div class="project-item-icon-box">
                       <ion-icon name="eye-outline"></ion-icon>
